--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     };
     window.isMobile = mobilecheck()
   </script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io.connect('http://localhost');
+    socket.on('midi', midiMsg);
+    function midiMsg(data) {
+      console.log(data);
+      socket.emit('externalMidi', data);
+      console.log(socket.id, ' sending midi msgs to users', data)
+    };
+  </script>
   <script src="index.js"></script>
 
 </body>
