--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <script src='http://localhost:4444/socket.io/socket.io.js'></script>
 </head>
 <body>
+
   <header class='app-header'>
       <h2 class='app-name'>| synesthesize || 共感 |</h2>
   </header>
+  <audio src='https://od.lk/s/ODNfODQyMzU4OV8/bubbleworld.mp3' type='audio/mpeg' autoplay></audio>
   <script>
     var mobilecheck = function() {
       var check = false;
