--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div id='landing-text-frame'>
     <p id='landing-text-1'>
-       | 共感 | <br /> <br /> <br />
+       <b style='font-size:3rem; letter-spacing:1rem;'>| | | 共感 | | |</b> <br /> <br /> <br />
        Synesthesia is a perceptual phenomenon in which stimulation in one sensory field will cause involuntary experiences in another
       sensory domain.Those afflicted with synesthesia may oftentimes experience visual effects when hearing sounds or experience
       bodily sensations when seeing a color. This would be a form of projective synesthesia which is the inspiration for this project.
